# hpi-harvester

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
docker/: lastfm-backup  traktexport-stats-optional.patch
examples/: harvester.yaml
examples/secrets/: lastfm.key.example  ps_timetracker.cookie.example
src/harvester/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  manifest.py  runner.py  scheduler.py  state.py  storage.py
tests/: test_config.py  test_manifest.py  test_runner.py  test_storage.py
tools/ps_timetracker_export/: pyproject.toml
tools/ps_timetracker_export/src/ps_timetracker_export/: main.py  parser.py
tools/ps_timetracker_export/tests/: test_parser.py
tools/ps_timetracker_export/tests/fixtures/: login.html  playtimes_last.html  playtimes_with_next.html
