[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpi-harvester"
version = "0.1.0"
description = "Personal data exports orchestrator"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "apscheduler>=3.10,<4.0",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[project.scripts]
harvester = "harvester.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
